--- a/src/main/resources/templates/imports/index.html
+++ b/src/main/resources/templates/imports/index.html
@@ -13,7 +13,7 @@
             </h2>
 
             <div class="btn-container d-flex mb-3 gap-2">
-                <a th:href="@{/products/add}" class="btn btn-primary">
+                <a th:href="@{/imports/add}" class="btn btn-primary">
                     Add Products
                 </a>
             </div>
