--- a/src/main/resources/templates/imports/add.html
+++ b/src/main/resources/templates/imports/add.html
@@ -20,28 +20,25 @@
                 New Products
             </h2>
 
-            <form class="form-format-inline" method="post" action="javascript:void(0);" th:action="@{/products/add}" th:object="${prd_form}">
+            <form class="form-format-inline" method="post" action="javascript:void(0);" th:action="@{/imports/add}" th:object="${prd_form}">
                 <div class="form-group">
                     <label class="form-label">Name:</label>
-                    <select class="form-select" th:name="name_id">
-                        <option value="" selected hidden></option>
-                        <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.category_name}"></option>
-                    </select>
+                    <input class="form-control" type="text" th:name="book_name" required/>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Price:</label>
-                    <input class="form-control" type="text" th:name="price"/>
+                    <input class="form-control" type="text" th:name="import_price" required/>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Quantity:</label>
-                    <input class="form-control" type="number" th:name="quantity"/>
+                    <input class="form-control" type="number" th:name="quantity" required/>
                 </div>
 
                 <div class="form-group">
-                    <label class="form-label">Supplier:</label>
-                    <select class="form-select" th:name="sup_id">
+                    <label class="form-label">Publisher:</label>
+                    <select class="form-select" th:name="sup_id" required>
                         <option value="" selected hidden></option>
                         <option th:each="supplier : ${suppliers}" th:value="${supplier.id}" th:text="${supplier.supplier}"></option>
                     </select>
