--- a/src/main/resources/templates/fragments/sideMenu.html
+++ b/src/main/resources/templates/fragments/sideMenu.html
@@ -49,9 +49,9 @@
                 </li>
 
                 <li th:class="${activeSupplier}">
-                    <a th:href="@{/suppliers}">
+                    <a th:href="@{/publisher}">
                         <span class="material-symbols-outlined">forklift</span>
-                        <span class="text-link">Suppliers</span>
+                        <span class="text-link">Publisher</span>
                     </a>
                 </li>
             </ul>
