--- a/src/main/resources/templates/products/category.html
+++ b/src/main/resources/templates/products/category.html
@@ -24,7 +24,7 @@
                 <form method="post" action="javascript:void(0);" th:action="@{/products/category}" th:object="${cate_form}">
                     <div class="mb-3">
                         <label class="form-label">Name:</label>
-                        <input class="form-control" type="text" th:name="category_name"/>
+                        <input class="form-control" type="text" th:name="category_name" required/>
                     </div>
 
                     <button type="submit" class="btn btn-primary">Submit</button>
