--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -23,6 +23,10 @@
         li {
           margin-bottom: 10px;
 
+          a, button {
+            color: #333;
+          }
+
           &:last-child {
             margin-bottom: 0;
           }
