--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,7 +19,9 @@
                         <a href="#">Profile</a>
                     </li>
                     <li>
-                        <a href="#">Logout</a>
+                        <form th:action="@{/logout}" method="post">
+                            <button type="submit">Logout</button>
+                        </form>
                     </li>
                 </ul>
             </div>
