--- a/src/main/resources/templates/layouts/guest.html
+++ b/src/main/resources/templates/layouts/guest.html
@@ -4,24 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Stock Manage</title>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="/css/main.css" type="text/css">
 </head>
 
-<body class="h-100vh">
-    <main class="container-fluid d-flex container-main" th:fragment="common">
-        <div th:replace ="~{fragments/sideMenu :: sideMenu}"></div>
+<body>
+    <main class="container-fluid" th:fragment="common">
+        <section class="section-main" layout:fragment="content">
 
-        <div class="section-right">
-            <div th:replace ="~{fragments/header :: header}"></div>
+        </section>
 
-            <section class="section-main" layout:fragment="content">
-
-            </section>
-
-            <div th:replace ="~{fragments/footer :: footer}">copyright @ 2022 Demo test</div>
-        </div>
+        <div th:replace ="~{fragments/footer :: footer}">copyright @ 2022 Demo test</div>
     </main>
 
     <script src="/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
