--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,8 @@
         <div class="d-flex navbar-right">
             <a class="" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
                 aria-controls="collapseExample">
-                Hello, User
+                Hello,
+                <span sec:authentication="name"></span>
             </a>
 
             <div class="collapse collapse-nav" id="collapseExample">
