--- a/_scss/_ultilities.scss
+++ b/_scss/_ultilities.scss
@@ -1,9 +1,9 @@
 .h-100vh {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container-main {
-  height: 100%;
+  min-height: 100vh;
   padding: 20px;
 }
 
