--- a/src/main/resources/templates/layouts/guest.html
+++ b/src/main/resources/templates/layouts/guest.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="container-fluid" th:fragment="common">
-        <section class="section-main" layout:fragment="content">
+        <section class="section-main h-100 mw-50 m-auto" layout:fragment="content">
 
         </section>
 
