--- a/_scss/_section.scss
+++ b/_scss/_section.scss
@@ -1,6 +1,6 @@
 .section-left {
   // width: 20%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .section-right {
@@ -9,7 +9,7 @@
   justify-content: space-between;
   margin-left: 20px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .section-main {
