--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,9 +1,9 @@
 .h-100vh {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container-main {
-  height: 100%;
+  min-height: 100vh;
   padding: 20px;
 }
 
@@ -176,7 +176,7 @@ button {
 }
 
 .section-left {
-  height: 100%;
+  min-height: 100%;
 }
 
 .section-right {
@@ -185,7 +185,7 @@ button {
   justify-content: space-between;
   margin-left: 20px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .section-main {
