--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,9 +5,9 @@
     <title>Login</title>
 </head>
 
-<body>
+<body style="margin-top: 250px;">
     <div layout:fragment="content">
-        <div class="container mw-50">
+        <div class="container">
             <div th:if="${param.error}">
                 Invalid username and password.
             </div>
