--- a/src/main/resources/templates/layouts/guest.html
+++ b/src/main/resources/templates/layouts/guest.html
@@ -11,11 +11,9 @@
 
 <body>
     <main class="container-fluid" th:fragment="common">
-        <section class="section-main h-100 mw-50 m-auto" layout:fragment="content">
-
+        <h1 class="h1 text-center mb-3">Books Manage</h1>
+        <section class="section-main h-100 m-auto" style="max-width: 400px;" layout:fragment="content">
         </section>
-
-        <div th:replace ="~{fragments/footer :: footer}">copyright @ 2022 Demo test</div>
     </main>
 
     <script src="/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
